--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
         </dependency>-->
+        <!-- Vector Database -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-chroma-store</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
